--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         input[type=number] {
             width: 100%;
             padding: 12px 0px;
+            padding-left: 5px;
             margin-top: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
@@ -59,8 +60,6 @@
         .message{
             font-family: Arial, Helvetica, sans-serif;
         }
-
-
         </style>
 
 
